tests/fail/if_cond.us
fn main() {
    if "a" {

    }

    if 10 {
        
    }
}